--- a/src/mknmz.pl.in
+++ b/src/mknmz.pl.in
@@ -1,7 +1,7 @@
 #! @PERL@ -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.pl.in,v 1.47 1999-08-31 04:47:12 satoru Exp $
+# $Id: mknmz.pl.in,v 1.48 1999-08-31 04:51:25 knok Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi  All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -216,14 +216,16 @@ sub load_modules () {
 	$filter =~ m!(\w+)\.pl$!;
 	my $module = $1;
 	require "$module.pl";
-	my (@mtypes, $status, $recursive);
+	my (@mtypes, $status, $recursive, $codeconv);
 	eval "\@mtypes =    ${module}::mediatype();";
 	eval "\$status =    ${module}::status();";
 	eval "\$recursive = ${module}::recursive();";
+	eval "\$codeconv  = ${module}::codeconv();";
 	for my $mt (@mtypes) {
 	    $conf::Supported{$mt} = $status;
 	    $var::REQUIRE_ACTIONS{$mt} = $module;
-	    $var::RECURSIVE_ACTIONS{$mt} = $recursive if ($recursive)
+	    $var::RECURSIVE_ACTIONS{$mt} = $recursive if ($recursive);
+	    $var::REQUIRE_CODECONV{$mt} = $codeconv if ($codeconv);
 	}
 	print STDERR "\@\@ loaded: $module.pl [@mtypes]\n" 
 	    if $TestMode;
@@ -482,20 +484,28 @@ sub load_document ($$$$\%) {
         util::cp($shelter_cfile, $cfile);
     }
 
-    $$content = util::readfile($cfile);
-    my $file_size = length($$content);
+    my $file_size;
+    $file_size = util::filesize($cfile); # not only file in feature.
+    if ($file_size > $conf::TEXT_SIZE_MAX) {
+	return ($file_size, $file_size, 0, 'x-system/x-error');
+    }
+   $$content = util::readfile($cfile);
+#    $file_size = length($$content);
 
     # filtering process
     my $mm = new File::MMagic;
     my $mtype;
     while (1) {
-	unless(File::MMagic::check_binary($$content)) { # text file
-	    codeconv::toeuc($content);
-	}
+#	unless(File::MMagic::check_binary($$content)) { # text file
+#	    codeconv::toeuc($content);
+#	}
 
 	my $mtype_n = $mm->checktype_byfilename($cfile);
 	my $mtype_c = $mm->checktype_contents($$content);
 	$mtype = decide_type($mtype_n, $mtype_c);
+	if (defined $var::REQUIRE_CODECONV{$mtype}) {
+	    codeconv::toeuc($content);
+	}
 	util::dprint("Detected type: $mtype\n");
 	if (defined $var::REQUIRE_ACTIONS{$mtype}) {
 	    util::vprint("Using $var::REQUIRE_ACTIONS{$mtype}.pl\n");
