lib/var.pl: Add serveal media types into %REQUIRE_CODECONV.

--- a/lib/var.pl.in
+++ b/lib/var.pl.in
@@ -1,5 +1,5 @@
 # -*- Perl -*-
-# $Id: var.pl.in,v 1.9 1999-08-31 04:51:23 knok Exp $
+# $Id: var.pl.in,v 1.10 1999-08-31 05:37:36 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi  All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
@@ -127,9 +127,15 @@ $PREFIX = "";
 
 %REQUIRE_ACTIONS = ();
 %RECURSIVE_ACTIONS = ();
-%REQUIRE_CODECONV = (
-		     'text/plain' => 1
-);
+%REQUIRE_CODECONV = 
+    (
+     'text/plain' => 1,
+     'message/rfc822' => 1,
+     'message/news' => 1,
+     'text/html' => 1,
+     'text/html; x-type=mhonarc' => 1,
+     'text/x-roff' => 1,
+     );
 %Supported = ();
 
 1;
