--- a/Makefile.in
+++ b/Makefile.in
@@ -89,12 +89,12 @@ SUBDIRS = $(always_built_SUBDIRS) @FILE_MMAGIC@ @TKNAMAZU@
 
 DIST_SUBDIRS = $(always_built_SUBDIRS) tknamazu
 
-EXTRA_DIST = README-ja namazu.spec.in 	     ChangeLog.old.1.gz File-MMagic
+EXTRA_DIST = README-ja namazu.spec.in namazu.spec 	     ChangeLog.old.1.gz File-MMagic
 
 
 EXTRA_DIRS = doc etc lib lisp filter template
 
-CLEANFILES = namazu.spec 	     filter/gzip.pl filter/compress.pl filter/man.pl filter/rfc.pl 	     filter/bzip2.pl filter/msword.pl filter/supported.pl 	     File-MMagic/Makefile File-MMagic/pm_to_blib 	     conf/mknmz.conf-dist lib/var.pl
+CLEANFILES = filter/gzip.pl filter/compress.pl filter/man.pl filter/rfc.pl 	     filter/bzip2.pl filter/msword.pl filter/supported.pl 	     File-MMagic/Makefile File-MMagic/pm_to_blib 	     conf/mknmz.conf-dist lib/var.pl
 
 CLEANDIRS = File-MMagic/blib
 
