conf/Makefile.am (mknmz.conf-dist): Modify regex for perl to treat %, @ prefixes as well as $.

--- a/conf/Makefile.am
+++ b/conf/Makefile.am
@@ -2,4 +2,4 @@ EXTRA_DIST = namazu.conf-dist
 all: mknmz.conf-dist
 mknmz.conf-dist: ../lib/conf.pl
 	@grep -v '^package conf;$$' ../lib/conf.pl | \
-	perl -pe 's/^\$$/\$$conf::/' > $@
+	perl -pe 's/^(\$$|\@|\%)/$$1conf::/' > $@
