--- a/conf/Makefile.in
+++ b/conf/Makefile.in
@@ -93,7 +93,7 @@ DIST_COMMON =  Makefile.am Makefile.in
 
 DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
-TAR = gtar
+TAR = tar
 GZIP_ENV = --best
 all: all-redirect
 .SUFFIXES:
@@ -121,7 +121,7 @@ distdir: $(DISTFILES)
 	@for file in $(DISTFILES); do \
 	  d=$(srcdir); \
 	  if test -d $$d/$$file; then \
-	    cp -pr $$/$$file $(distdir)/$$file; \
+	    cp -pr $$d/$$file $(distdir)/$$file; \
 	  else \
 	    test -f $(distdir)/$$file \
 	    || ln $$d/$$file $(distdir)/$$file 2> /dev/null \
@@ -191,7 +191,7 @@ mostlyclean distclean maintainer-clean
 all: mknmz.conf-dist
 mknmz.conf-dist: ../lib/conf.pl
 	@grep -v '^package conf;$$' ../lib/conf.pl | \
-	perl -pe 's/^\$$/\$$conf::/' > $@
+	perl -pe 's/^(\$$|\@|\%)/$$1conf::/' > $@
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
