tknamazu/{Makefile.am,README.tknamazu}: s/tknamazu.xpm/tknamazu.ppm/g tknamazu/tknamazu.tcl.in: Use .ppm instead of .xpm tknamazu/tknamazu.ppm: New file. tknamazu/tknamazu.xpm: Removed.

--- a/tknamazu/Makefile.am
+++ b/tknamazu/Makefile.am
@@ -4,7 +4,7 @@ AUTOMAKE_OPTIONS = no-dependencies
 tknamazudir = @pkgdatadir@/tknamazu
 
 bin_SCRIPTS = tknamazu
-tknamazu_DATA = tknamazu.hlp tknamazu.xpm mini-tknamazu.xpm
+tknamazu_DATA = tknamazu.hlp tknamazu.ppm mini-tknamazu.xpm
 
 CLEANFILES = tknamazu.tcl
 
