--- a/lib/var.pl.in
+++ b/lib/var.pl.in
@@ -1,5 +1,5 @@
 # -*- Perl -*-
-# $Id: var.pl.in,v 1.11 1999-08-31 09:34:35 satoru Exp $
+# $Id: var.pl.in,v 1.12 1999-09-01 01:11:22 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi  All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
@@ -54,6 +54,7 @@ $NMZ{msg}    = "$base.msg";
 $NMZ{body}   = "$base.body";
 $NMZ{err}    = "$base.err";
 $NMZ{w}      = "$base.w";
+$NMZ{wi}     = "$base.wi";
 $NMZ{p}      = "$base.p";
 $NMZ{pi}     = "$base.pi";
 $NMZ{field}  = "$base.field";
@@ -69,14 +70,15 @@ $NMZ{_pi} = $NMZ{pi};
 $NMZ{_r}  = $NMZ{r};
 $NMZ{_ii} = $NMZ{ii};
 $NMZ{_w}  = $NMZ{w};
+$NMZ{_wi} = $NMZ{wi};
 
 $NMZ{_flist}       = "$base.flist";
 $NMZ{_checkpoint}  = "$base.checkpoint";
 
-$NMZ{__i}      = "$base.tmp_i";
-$NMZ{__w}      = "$base.tmp_w";
-$NMZ{__p}      = "$base.tmp_p";
-$NMZ{__pi}     = "$base.tmp_pi";
+$NMZ{__i}  = "$base.tmp_i";
+$NMZ{__w}  = "$base.tmp_w";
+$NMZ{__p}  = "$base.tmp_p";
+$NMZ{__pi} = "$base.tmp_pi";
 
 
 $OUTPUT_DIR = undef;
