--- a/Makefile.am
+++ b/Makefile.am
@@ -17,7 +17,7 @@ EXTRA_DIRS = doc etc lib lisp filter template
 CLEANFILES = filter/gzip.pl filter/compress.pl filter/man.pl filter/rfc.pl \
 	     filter/bzip2.pl filter/msword.pl filter/supported.pl \
 	     File-MMagic/Makefile File-MMagic/pm_to_blib \
-	     conf/mknmz.conf-dist lib/var.pl
+	     conf/mknmz.conf-dist lib/var.pl lib/conf.pl
 CLEANDIRS  = File-MMagic/blib
 
 pkgdatadir = @datadir@/@PACKAGE@
