configure.in, config.h.in, src/{var,message.c}: Rename several macro definiions for C program. See ChangeLog for more.

--- a/config.h.in
+++ b/config.h.in
@@ -38,20 +38,20 @@
 #undef YYTEXT_POINTER
 
 /* Define the pathname of default index directory */
-#undef INDEXDIR
+#undef OPT_INDEXDIR
 
 /* Define the pathname of namazu.conf */
 #undef OPT_NAMAZU_CONF
 
 /* Define the default language (ja or en) */
-#undef LANGUAGE
+#undef OPT_LANGUAGE
 
 /* Scoring method
      * SIMPLE :  score is simply calculated by term frequency
      * TFIDF  :  score is calculated by tfidf method
        (It's meaningful when query contains two or over keywords)
  */
-#undef SCORING
+#undef OPT_SCORING
 
 /* Define if you want to fix the bug of MSIE4.x for Macintosh :-( */
 #undef MSIE4MACFIX
