--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -135,7 +135,7 @@ mknmz.pl.in result.c
 
 DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
-TAR = gtar
+TAR = tar
 GZIP_ENV = --best
 SOURCES = $(namazu_SOURCES)
 OBJECTS = $(namazu_OBJECTS)
@@ -271,7 +271,7 @@ distdir: $(DISTFILES)
 	@for file in $(DISTFILES); do \
 	  d=$(srcdir); \
 	  if test -d $$d/$$file; then \
-	    cp -pr $$/$$file $(distdir)/$$file; \
+	    cp -pr $$d/$$file $(distdir)/$$file; \
 	  else \
 	    test -f $(distdir)/$$file \
 	    || ln $$d/$$file $(distdir)/$$file 2> /dev/null \
@@ -353,7 +353,7 @@ maintainer-clean-generic clean mostlyclean distclean maintainer-clean
 
 ##################################################################
 
-mknmz: mknmz.pl ../lib/var.pl ../lib/conf.pl
+mknmz: mknmz.pl
 	rm -f $@
 	sed -e 's!%CONFDIR%!$(confdir)!g' \
 	    -e 's!%LIBDIR%!$(libdir)!g' \
